Page spacing fixed
Right section no longer clamped to the top, replaced top-2 with mt-2.

No-scrollbar in globals.css updated to direct manipulation of scrollbar width

--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,8 @@
   }
 }
 
-@layer utilities {
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+  height: 0px;
 }
